# gbc_emulator

./: .gitignore  AUTHORS  ChangeLog  Makefile  README  README.md  configure  configure.ac
autom4te.cache/: output.0  traces.0  traces.1
src/: Makefile.am  Makefile.in  emulator.c  emulator.h  gbc_file_info.c  gpu.c  gpu.h  interrupts.c  interrupts.h  keyboard.c  keyboard.h  log.h  memory.c  memory.h  opcodes.c  opcodes.h  timer.c  timer.h
src/lib/: gbc_format.c  gbc_format.h
