AC_PREREQ(2.67)
AC_INIT(GBC_Emulator, 1.0, Gx.Hugo@gmail.com)
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h strings.h stdio.h])

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC

AC_PROG_MAKE_SET

AC_CONFIG_FILES([
        Makefile
        src/Makefile
        ])
AC_OUTPUT